--- a/frontend/about.html
+++ b/frontend/about.html
@@ -93,7 +93,7 @@ html {
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="../image/pic1.png" alt="Jane" style="width:100%" class="img">
+      <img src="../pic1.png" alt="Jane" style="width:100%" class="img">
       <div class="container">
         <h2>Jane Doe</h2>
         <p class="title">CEO & Founder</p>
@@ -106,7 +106,7 @@ html {
 
   <div class="column">
     <div class="card" >
-      <img src="../image/pic2.png" alt="Mike" style="width:100%" class="img" >
+      <img src="../pic2.png" alt="Mike" style="width:100%" class="img" >
       <div class="container">
         <h2>Mike Ross</h2>
         <p class="title">Art Director</p>
@@ -119,7 +119,7 @@ html {
   
   <div class="column">
     <div class="card">
-      <img src="../image/pic3.png" alt="John" style="width:100%" class="img">
+      <img src="../pic3.png" alt="John" style="width:100%" class="img">
       <div class="container">
         <h2>Jean Doe</h2>
         <p class="title">Designer</p>
